--- a/talk-beta/tsconfig.app.json
+++ b/talk-beta/tsconfig.app.json
@@ -26,7 +26,8 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "types": [], // Explicitly specify no extra type definitions
   },
   "include": ["src"]
 }
